# MVP

./: .dockerignore  .env.development  .env.example  .eslintrc.json  .gitignore  .pre-commit-config.yaml  .windsurfrules  AI_AGENT_CONTEXT.md  AI_EXECUTION_PROMPT.md  AI_FILES_CHECKLIST.md  AI_INTEGRATION_COMPLETE_REPORT.md  CHANGELOG.md  CLEANUP_COMPLETE.md  COPY_THIS_AI_PROMPT.txt  DEVELOPMENT_PLAN_NO_MCP.md  Dockerfile  ENV_VARIABLES_REFERENCE.md  FINAL_AI_EXECUTION_PACKAGE.md  INFRASTRUCTURE_COMPLETE.md  MASTER_PLAN.md  PROJECT_ANALYSIS.md  PROMPT_ATTACHMENTS_GUIDE.md  QUICK_AI_GUIDE.md  QUICK_START.md  README.md  REFACTORING_COMPLETE.md  SECURITY.md  SETUP_COMPLETE.md  VENTAI_ENTERPRISE_PLAN.md  WINDSURF_ACTIVATION_GUIDE.md  WINDSURF_INTEGRATION_COMPLETION_REPORT.md  WINDSURF_INTEGRATION_INSTRUCTIONS.md  babel.config.js  build-and-test-mcp.sh  cypress.config.js  demo_ai_functionality.py  diagnose-local-dev.sh  docker-compose.dev.yml  docker-compose.yml  docker-management.sh  (+39 more)
.devcontainer/: QUICKSTART.md  README.md  SUMMARY.md  devcontainer.json  docker-compose.yml  quick-test.sh  requirements-dev.txt  setup.sh
.windsurf/: ACTIVATION_COMMANDS.md  ANALYSIS_ACTIVATION_SYSTEM.md  ENTERPRISE_QUICK_COMMANDS.md  QUICK_COMMANDS.txt  QUICK_START_GUIDE.md  README.md  REORGANIZATION_COMPLETE.md  UKRAINE_SUCCESS_REPORT.md  WINDSURF_EXACT_INTEGRATION_COMPLETE.md  WINDSURF_INTEGRATION_FINAL_REPORT.md  activate_ultimate.sh  test_activation_commands.sh
autotickets/: AT-004.md
backend/: .dockerignore  .env.minimal  Dockerfile  Dockerfile.dev  Dockerfile.prod  api_optimization.py  (+423 more)
(+1366 files in other folders)
